second version desktop included

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </div>
 
 <div class="section2__bars">
-    <p>HTML</p> 
+    <p class="left">HTML</p> 
 <div class="range-container">
   <div class="skills html"></div>
 </div>
@@ -110,7 +110,7 @@
 <div class="range-container">
   <div class="skills sketch"></div>
 </div>
-</div>
+
 
 
 </div>
@@ -126,38 +126,40 @@
 
 <div class="section3__cards">
     <div class="section3__cards__card1">
-        <i class="lni lni-code-alt"></i>
-        <h3>Web Design</h3>
+        <!-- <i class="lni lni-code-alt icon"></i> -->
+        <i class="fas fa-desktop icon"></i>
+
+        <h2>Web Design</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, in.</p>
     </div>
 
     <div class="section3__cards__card2">
-        <i class="lni lni-pallet"></i>
-        <h3>Graphic Design</h3>
+        <i class="lni lni-pallet icon"></i>
+        <h2>Graphic Design</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, in.</p>
     </div>
 
     <div class="section3__cards__card3">
-        <i class="lni lni-tab"></i>
-        <h3>App Design</h3>
+        <i class="lni lni-tab icon"></i>
+        <h2>App Design</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, in.</p>
     </div>
 
     <div class="section3__cards__card4">
-        <i class="lni lni-vector"></i>
-        <h3>Illustration Design</h3>
+        <i class="lni lni-vector icon"></i>
+        <h2>Illustration Design</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, in.</p>
     </div>
 
     <div class="section3__cards__card5">
-        <i class="lni lni-graph"></i>
-        <h3>Web Development</h3>
+        <i class="lni lni-graph icon"></i>
+        <h2>Web Development</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, in.</p>
     </div>
 
     <div class="section3__cards__card6">
-        <i class="lni lni-support"></i>
-        <h3>Consultancy and Support</h3> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, in.</p>
+        <i class="lni lni-support icon"></i>
+        <h2>Consultancy and Support</h2> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, in.</p>
     </div>
 </div>
 
@@ -165,11 +167,11 @@
 <!-- SECTION 4 -->
 
 <section class="section4">
-<h2>Have any project on mind?</h2>
+<h1>Have any project on mind?</h1>
 
 <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, nemo doloribus minima laudantium amet adipisci!</div>
 
-<button id="CV">Download CV</button>
+<button id="CV">Download CV</button> <br>
 <button id="hire">Hire Me</button>
 
 </section>
@@ -177,13 +179,18 @@
 
 <section class="section5">
     <h2>My Recent Works</h2>
-    <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat nemo sit adipisci, debitis voluptatibus ullam!</div>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat nemo sit adipisci, debitis voluptatibus ullam!</p>
 
     <div class="section5__pics">
+        <div class="section5__pics__pic1"></div>
+        <div class="section5__pics__pic2"></div>
+        <div class="section5__pics__pic3"></div>
+        <div class="section5__pics__pic4"></div>
+        
     </div>
 
     <div class="section5__button">
-        <button class="purple">More works</button>
+        <button class="btn_purple">More works</button>
     </div>
 
 </section>
@@ -191,14 +198,14 @@
 
 <section class="section6">
 <h2>My Pricing Plans</h2>
-<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit animi accusantium eveniet corporis nesciunt recusandae.</div>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit animi accusantium eveniet corporis nesciunt recusandae.</p>
 
 <div class="section6__pricecontainer">
 <div class="section6__pricecontainer__title"><h3>Basic</h3></div>
 
 <div class="section6__pricecontainer__box2">
-    <div>Simple project management for teams and small business</div>
-    <div>$19.00</div>
+    <p>Simple project management for teams and small business</p>
+    <div class="price">$19.00</div>
 </div>
 
 </div>
